--- a/pathlib_praktyka/pathlib.ipynb
+++ b/pathlib_praktyka/pathlib.ipynb
@@ -2,18 +2,232 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89b12001",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test\n"
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cfbec062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folders = [\n",
+    "    'project',\n",
+    "    'project/data_raw/raw.csv',\n",
+    "    'project/data_processed/processed.csv',\n",
+    "    'project/charts',\n",
+    "    'project/client/emails'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "174c6655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for folder in folders:\n",
+    "    p = Path.cwd() / folder\n",
+    "    \n",
+    "    if p.suffix:\n",
+    "        p.parent.mkdir(parents=True)\n",
+    "        p.touch()\n",
+    "\n",
+    "    else:\n",
+    "        p.mkdir(parents=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5ce91f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Path.cwd() / 'data.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "58cb1e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/Ja/Desktop/edukacja/pathlib_praktyka/data.csv')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "becd65ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/Ja/Desktop/edukacja')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.parent.parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7e082c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Ja')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.home()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4add825c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('na_testa.txt')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Path('na_testa.txt')\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bfc23898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = p.resolve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c015adc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "15b12ca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Ja/Desktop/edukacja/pathlib_praktyka/na_testa.txt')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "14cda301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Ja/Desktop/edukacja/pathlib_praktyka/testa.txt')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.rename(p.parent / 'testa.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6ada3295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('C:\\\\',\n",
+       " 'Users',\n",
+       " 'Ja',\n",
+       " 'Desktop',\n",
+       " 'edukacja',\n",
+       " 'pathlib_praktyka',\n",
+       " 'na_testa.txt')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.parts"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfbec062",
+   "id": "490a56ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -26,7 +240,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
